--- a/src/main/resources/static/css/spot-adding-request.css
+++ b/src/main/resources/static/css/spot-adding-request.css
@@ -1,17 +1,37 @@
-.spot-adding-request__list-item-img {
-    height: 35dvw;
-    width:  35dvw;
+.spot-adding-request__item-img-wrapper {
+    height: 100%;
+    width:  40%;
+}
+
+.spot-adding-request__item-img {
+    height: 100%;
+    width: 100%;
     object-fit: cover;
 }
 
-.spot-adding-request__list-item-card {
+.spot-adding-request__item-card {
     flex-direction: row;
+    margin-left: 10px;
+    margin-right: 10px;
+    width: calc(100% - 20px);
+    height: 180px;
+    padding: 8px;
+    background-color: var(--spot-adding-request-card-bg-color);
+    color: var(--spot-adding-request-card-color);
 }
 
-.spot-adding-request__list-item-card-info {
-    height: 35vw;
-    width: 65vw;
+.spot-adding-request__item-info {
+    height: 100%;
+    width: 60%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
+    text-align: center;
+    padding: 5px;
+    margin-left: 10px;
+}
+
+.spot-adding-request__item-inserted-date {
+    color: var(--spot-adding-request-inserted-date-add);
 }
