--- a/src/main/resources/static/css/spot-list-map.css
+++ b/src/main/resources/static/css/spot-list-map.css
@@ -1,40 +1,4 @@
 
-.spot-list__card-container {
-    display: flex;
-    justify-content: center;
-    align-items: stretch;
-    gap: 20px;
-    margin-bottom: 20px;
-}
-
-.spot-list__card {
-    padding: 10px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    text-align: center;
-    max-width: 300px;
-    min-height: 200px;
-    background-color: white;
-    transition: transform 0.3s ease-in-out;
-    display: block;
-}
-
-.spot-list__card h3 {
-    font-size: 1.2em;
-    color: navy;
-}
-
-.spot-list__img {
-    max-width: 50%;
-    height: auto;
-    object-fit: cover;
-}
-
-.spot-list__card:hover {
-    transform: scale(1.05);
-}
-
-/**/
-
 body {
     overflow-y: hidden;
 }
@@ -71,7 +35,7 @@ main {
     margin-top: 10px;
 }
 
-.map-list {
+.spots {
     position: fixed;
     top: 90px;
     bottom: 50px;
@@ -84,19 +48,54 @@ main {
     overflow: hidden;
 }
 
-.map-list__map {
+.spot__map {
     height: 100%;
     width: 100%;
     background-color: darkseagreen;
-    border-radius: 15px;
 }
 
-.map-list__list {
+.spot__list-wrapper {
     overflow-y: auto;
-    border-radius: 15px;
     height: 100%;
     width: 100%;
-    background-color: darkcyan;
+}
+
+.spot__item-img-wrapper {
+    height: 100%;
+    width:  40%;
+}
+
+.spot__item-img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.spot__item-card {
+    flex-direction: row;
+    margin-left: 10px;
+    margin-right: 10px;
+    width: calc(100% - 20px);
+    height: 180px;
+    padding: 8px;
+    background-color: var(--spot-adding-request-card-bg-color);
+    color: var(--spot-adding-request-card-color);
+}
+
+.spot__item-info {
+    height: 100%;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+    padding: 5px;
+    margin-left: 10px;
+}
+
+.spot__item-inserted-date {
+    color: var(--spot-adding-request-inserted-date-add);
 }
 
 .view-changing-btn {
