--- a/src/main/resources/templates/spots.html
+++ b/src/main/resources/templates/spots.html
@@ -12,6 +12,7 @@
     <script src="/js/location-util.js" defer th:if="${viewMode == 'YMAP'}"></script>
     <script src="/js/ymap.js" defer th:if="${viewMode == 'YMAP'}"></script>
     <link href="/css/spot-list-map.css" rel="stylesheet">
+    <link href="/css/pagination.css" rel="stylesheet">
 </head>
 <body>
     <main layout:fragment="content" class="content">
@@ -24,51 +25,39 @@
                 <div class="search-block__filters">Фильтры</div>
             </div>
         </div>
-        <div class="map-list">
-            <div class="map-list__map" id="spot-map-container-id" defer th:if="${viewMode == 'YMAP'}">
+        <div class="spots">
+            <div class="spot__map" id="spot-map-container-id" defer th:if="${viewMode == 'YMAP'}">
                 <div id="yandex-map-id" style="width: 100%; height: 100%"></div>
-                <a th:href="@{'/spots?pageNumber=0&pageSize=3&viewMode=CARDS'}"
+                <a th:href="@{'/spots?pageNumber=0&pageSize=10&viewMode=CARDS'}"
                    class="view-changing-btn">Список</a>
             </div>
-            <div class="map-list__list" id="spot-list-container-id"  defer th:if="${viewMode == 'CARDS'}">
-                <div th:if="${not #lists.isEmpty(spotList.content)}">
-                    <div th:each="spot : ${spotList.content}" class="spot-list__card-container">
-                        <a th:href="@{/spot/{spotId}(spotId=${spot.id()})}"
-                           class="spot-list__card">
-                            <h3 th:text="${spot.name()}"></h3>
-                            <p>Координаты: <span th:text="${spot.latitude()}"></span> <span th:text="${spot.longitude()}"></span></p>
-                            <p th:text="${spot.description()}"></p>
-                            <img class="spot-list__img" th:src="@{${spot.firstImageLink()}}" alt="Фотография места"/>
-                        </a>
+            <div class="spot__list-wrapper" id="spot-list-container-id" th:if="${viewMode == 'CARDS'}">
+                <div class="container mt-3 mb-3">
+                    <div class="row row-cols-1 g-3 spot__list"
+                         th:if="${viewMode == 'CARDS'}">
+                        <th:block th:each="item : ${spotList.content}">
+                            <a th:href="@{/spot/{spotId}(spotId=${item.id()})}"
+                               class="col card card-container shadow-sm rounded spot__item-card">
+                                <div class="spot__item-img-wrapper">
+                                    <img th:src="${item.firstImageLink()}" alt="spot image"
+                                         class="rounded d-block spot__item-img"/>
+                                </div>
+                                <div class="spot__item-info">
+                                    <h5 class="mt-2" th:text="${item.name()}"></h5>
+                                    <div class="spot__item-inserted-date"
+                                         th:text="${item.insertedAt()}"></div>
+                                </div>
+                            </a>
+                        </th:block>
+                    </div>
+                    <div th:if="${#lists.isEmpty(spotList.content)}">
+                        Нет доступных мест.
                     </div>
                 </div>
-                <div th:if="${#lists.isEmpty(spotList.content)}">
-                    Нет доступных мест.
-                </div>
 <!--             Добавляем навигацию по страницам -->
-                <div th:if="${spotList.totalPages > 1}">
-
-                    <nav aria-label="Pagination navigation">
-                        <ul class="spot-list__pagination">
-                            <li th:if="${spotList.number > 0}"
-                                th:attr="class=${spotList.number == 0 ? '' : 'page-item'}">
-                                <a href="#"
-                                   th:href="@{'/spots?pageNumber=' + ${spotList.number - 1} + '&pageSize=3&viewMode=CARDS'}"
-                                   class="spot-list__page-link">Предыдущая</a>
-                            </li>
-                            <li th:each="i : ${#numbers.sequence(0, spotList.totalPages - 1)}"
-                                th:attr="class=${spotList.number == i ? 'active' : ''}">
-                                <a href="#" th:href="@{'/spots?pageNumber=' + ${i} + '&pageSize=3&viewMode=CARDS'}"
-                                   class="spot-list__page-link" th:text="${i + 1}"></a>
-                            </li>
-                            <li th:if="${spotList.number < spotList.totalPages - 1}"
-                                th:attr="class=${spotList.number == spotList.totalPages - 1 ? '' : 'page-item'}">
-                                <a href="#" th:href="@{'/spots?pageNumber=' + ${spotList.number + 1} + '&pageSize=3&viewMode=CARDS'}"
-                                   class="spot-list__page-link">Следующая</a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
+                <nav th:replace="fragments/pagination :: paginationRow(pageable=${spotList}, paginationUrl='/spots', totalItemsLabel='Найдено спотов')">
+                    place for list pagination
+                </nav>
                 <a th:href="@{'/spots?viewMode=YMAP'}" class="view-changing-btn">Карта</a>
             </div>
         </div>
