--- a/src/main/resources/templates/fragments/forms/sign-up.html
+++ b/src/main/resources/templates/fragments/forms/sign-up.html
@@ -21,8 +21,8 @@
       <div th:if="${#fields.hasErrors('username')}" th:errors="*{username}"
            class="input-msg-error">ошибка валидации логина</div>
       <label for="username" class="input-label__label">Логин</label>
-      <input type="text" id="username" th:field="*{username}" placeholder="никнейм"
-             class="input-label__input"/>
+      <input type="text" id="username" th:field="*{username}" placeholder="rider22"
+             autocomplete="username" class="input-label__input"/>
     </div>
 
     <div class="input-label">
@@ -30,7 +30,7 @@
            class="input-msg-error">ошибка валидации пароля</div>
       <label for="rawPassword" class="input-label__label">Пароль</label>
       <input type="password" id="rawPassword" th:field="*{rawPassword}" placeholder="******"
-             class="input-label__input"/>
+             autocomplete="new-password" class="input-label__input"/>
     </div>
 
     <button type="submit" class="input-submit-btn">Зарегистрироваться</button>
