--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Profile страница</title>
-    <link href="/css/profile.css" rel="stylesheet">
+    <link href="/css/profile.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 <div layout:fragment="content" class="content">
