--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -8,15 +8,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="/favicon.ico" />
 
-    <link href="/css/lib/bootstrap5-3-7.min.css" rel="stylesheet">
+    <link href="/css/lib/bootstrap5-3-7.min.css" type="text/css" rel="stylesheet">
     <script src="/js/lib/bootstrap5-3-7.bundle.min.js"></script>
 
-    <link href="/css/normalize.css" rel="stylesheet">
-    <link href="/css/vars/dark-theme.css" rel="stylesheet">
+    <link href="/css/normalize.css" type="text/css" rel="stylesheet">
+    <link href="/css/vars/dark-theme.css" type="text/css"rel="stylesheet">
     <!--    <link href="/css/themes/light.css" rel="stylesheet">-->
-    <link href="/css/vars/global.css" rel="stylesheet">
-    <link href="/css/common.css" rel="stylesheet">
-    <link href="/css/nav.css" rel="stylesheet">
+    <link href="/css/vars/global.css" type="text/css" rel="stylesheet">
+    <link href="/css/common.css" type="text/css" rel="stylesheet">
+    <link href="/css/nav.css" type="text/css" rel="stylesheet">
     <script src="/js/scrollbar.js" defer></script>
 </head>
 <body>
