--- a/src/main/resources/templates/spot-adding-request-list.html
+++ b/src/main/resources/templates/spot-adding-request-list.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Spot adding request list page</title>
-    <link href="/css/spot-adding-request.css" rel="stylesheet">
+    <link href="/css/spot-adding-request.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 <div layout:fragment="content" class="content">
