Xmap 36 - слайдер картинок для страницы спота

--- a/src/main/resources/templates/spot-instance.html
+++ b/src/main/resources/templates/spot-instance.html
@@ -6,21 +6,46 @@
 <head>
     <meta charset="UTF-8">
     <title>Spot страница</title>
+    <link href="/css/spot-instance.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <div layout:fragment="content" class="content">
         <h2 th:text="${spot.name()}" class="header-title"></h2>
-        <div>
-            <div th:if="${#lists.isEmpty(spot.spotImageLinks())}">
-                Картинки для спота отсутствуют
+        <div th:if="${#lists.isEmpty(spot.spotImageLinks())}">
+            Картинки для спота отсутствуют
+        </div>
+        <!-- Карусель спотов -->
+        <div th:if="${not #lists.isEmpty(spot.spotImageLinks())}"
+             id="spotImageCarouselWithIndicators" class="carousel slide" data-bs-interval="false">
+            <div th:if="${#lists.size(spot.spotImageLinks()) > 1}"
+                 class="carousel-indicators">
+                <button th:each="imageLink,iterStat : ${spot.spotImageLinks()}"
+                        type="button" data-bs-target="#spotImageCarouselWithIndicators"
+                        th:data-bs-slide-to="${iterStat.index}"
+                        th:classappend="${iterStat.first ? 'active' : ''}"
+                        th:attr="aria-current=${iterStat.first ? 'true' : null}"
+                        th:aria-label="${'Slide ' + iterStat.index + 1}">
+                </button>
             </div>
-            <div th:if="${not #lists.isEmpty(spot.spotImageLinks())}">
-                <img th:each="link : ${spot.spotImageLinks()}"
-                     th:src="@{${link}}"
-                     width="300px"
-                     alt="img">
+            <div class="carousel-inner">
+                <div th:each="imageLink,iterStat : ${spot.spotImageLinks()}"
+                     class="carousel-item"
+                     th:classappend="${iterStat.index == 0 ? 'active' : ''}">
+                    <img th:src="${imageLink}" class="spot__carousel-img" alt="spot image">
+                </div>
             </div>
-
+            <button th:if="${#lists.size(spot.spotImageLinks()) > 1}"
+                    class="carousel-control-prev" type="button"
+                    data-bs-target="#spotImageCarouselWithIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button th:if="${#lists.size(spot.spotImageLinks()) > 1}"
+                    class="carousel-control-next" type="button"
+                    data-bs-target="#spotImageCarouselWithIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
 
         <div th:text="${spot.description()}"></div>
