--- a/src/main/resources/templates/spot-adding-request-instance.html
+++ b/src/main/resources/templates/spot-adding-request-instance.html
@@ -37,9 +37,9 @@
                     th:aria-label="${'Slide ' + iterStat.index + 1}">
             </button>
         </div>
-        <div class="carousel-inner spot-adding-request__carousel-inner">
+        <div class="carousel-inner">
             <div th:each="imageLink,iterStat : ${spotAddingRequest.spotImageLinks()}"
-                 class="carousel-item spot-adding-request__carousel-item"
+                 class="carousel-item"
                  th:classappend="${iterStat.index == 0 ? 'active' : ''}">
                 <img th:src="${imageLink}" class="spot-adding-request__carousel-img" alt="spot image">
             </div>
