--- a/src/main/resources/static/css/spot-adding-request.css
+++ b/src/main/resources/static/css/spot-adding-request.css
@@ -16,8 +16,8 @@
     width: calc(100% - 20px);
     height: 180px;
     padding: 8px;
-    background-color: var(--spot-adding-request-card-bg-color);
-    color: var(--spot-adding-request-card-color);
+    background-color: var(--spot-card-bg-color);
+    color: var(--spot-card-color);
 }
 
 .spot-adding-request__item-info {
@@ -33,5 +33,5 @@
 }
 
 .spot-adding-request__item-inserted-date {
-    color: var(--spot-adding-request-inserted-date-add);
+    color: var(--spot-inserted-date-add);
 }
