--- a/src/main/resources/templates/fragments/forms/sign-in.html
+++ b/src/main/resources/templates/fragments/forms/sign-in.html
@@ -19,7 +19,7 @@
       <input id="password" type="password" name="password" placeholder="******"
              autocomplete="current-password" class="input-label__input"/>
     </div>
-    <input type="submit" value="Войти" class="input-submit-btn"/>
+    <input type="submit" value="Войти" class="btn btn-orange w-100 h-50px mt-20px"/>
     <a href="/sign-up" class="link-to-sign-up">Еще нет аккаунта?</a>
   </form>
 </body>
