--- a/src/main/resources/templates/fragments/forms/spot-adding-request.html
+++ b/src/main/resources/templates/fragments/forms/spot-adding-request.html
@@ -45,7 +45,7 @@
              class="input-label__input"/>
     </div>
 
-    <button type="submit" class="input-submit-btn">Создать</button>
+    <button type="submit" class="btn btn-orange w-100 h-50px mt-20px">Создать</button>
   </form>
 </body>
 </html>
