--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -78,13 +78,30 @@ body {
     outline: 2px solid var(--input-focus-outline-color);
 }
 
-.input-submit-btn {
-    color: var(--input-submit-btn-color);
-    background-color: var(--input-submit-btn-bg-color);
-    border-radius: 8px;
+/* для использования bootstrap класса .btn */
+.btn-orange {
+    --bs-btn-color: var(--orange-btn-color);
+    --bs-btn-bg: var(--orange-btn-bg-color);
+    --bs-btn-border-color: var(--orange-btn-border-color);
+    --bs-btn-hover-color: var(--orange-btn-hover-color);
+    --bs-btn-hover-bg: var(--orange-btn-hover-bg);
+    --bs-btn-hover-border-color: var(--orange-btn-hover-border-color);
+    --bs-btn-focus-shadow-rgb: var(--orange-btn-focus-shadow-rgb);
+    --bs-btn-active-color: var(--orange-btn-active-color);
+    --bs-btn-active-bg: var(--orange-btn-active-bg);
+    --bs-btn-active-border-color: var(--orange-btn-active-border-color);
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: var(--orange-btn-disabled-color);
+    --bs-btn-disabled-bg: var(--orange-btn-disabled-bg);
+    --bs-btn-disabled-border-color: var(--orange-btn-disabled-border-color);
+    font-weight: bold;
+}
+
+.h-50px {
     height: 50px;
-    width: 100%;
-    border: none;
+}
+
+.mt-20px {
     margin-top: 20px;
 }
 
