--- a/src/main/resources/templates/fragments/forms/sign-up.html
+++ b/src/main/resources/templates/fragments/forms/sign-up.html
@@ -21,7 +21,7 @@
       <div th:if="${#fields.hasErrors('username')}" th:errors="*{username}"
            class="input-msg-error">ошибка валидации логина</div>
       <label for="username" class="input-label__label">Логин</label>
-      <input type="text" id="username" th:field="*{username}" placeholder="rider22"
+      <input type="text" id="username" th:field="*{username}" placeholder="nickname"
              autocomplete="username" class="input-label__input"/>
     </div>
 
@@ -33,7 +33,7 @@
              autocomplete="new-password" class="input-label__input"/>
     </div>
 
-    <button type="submit" class="input-submit-btn">Зарегистрироваться</button>
+    <button type="submit" class="btn btn-orange w-100 h-50px mt-20px">Зарегистрироваться</button>
     <a href="/sign-in" class="link-to-sign-in">Войти</a>
   </form>
 </body>
