--- a/src/main/resources/static/css/vars/dark-theme.css
+++ b/src/main/resources/static/css/vars/dark-theme.css
@@ -71,4 +71,5 @@
     --spot-inserted-date-add: #b3b3b5;
     --spot-card-bg-color: #3a3a3a;
     --spot-card-color: #f8f8f8;
+    --choice-map-point-color: #fff;
 }
