--- a/src/main/resources/templates/spot-adding-request.html
+++ b/src/main/resources/templates/spot-adding-request.html
@@ -6,6 +6,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Spot adding request страница</title>
+    <link href="/css/map_for_instance.css" type="text/css" rel="stylesheet">
+
     <script src="https://api-maps.yandex.ru/v3/?apikey=b9ae7ce3-4f8e-4018-ae49-7751e42c5c25&lang=ru_RU"></script>
     <script src="https://cdn.jsdelivr.net/npm/@yandex/ymaps3-default-ui-theme@0.0.19/dist/index.min.js"></script>
     <script src="/js/location-util.js"></script>
