--- a/src/main/resources/static/css/map_for_instance.css
+++ b/src/main/resources/static/css/map_for_instance.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    color: var(--choice-map-point-color);
+    color: var(--choice-map-point-btn-color);
     font-size: 20px;
     text-decoration: underline;
 }
@@ -13,4 +13,26 @@
 
 .coords-inputs__input {
     margin-right: 30px;
+}
+
+.map-modal__header,
+.map-modal__body,
+.map-modal__footer {
+    background-color: var(--map-modal-bg-color);
+    border-color: var(--map-modal-border-color);
+}
+
+.map-modal__header {
+    color: var(--map-modal-text-color);
+}
+
+.map-modal__btn-close {
+    height: 20px;
+    width: 20px;
+    display: block;
+    margin-left: auto;
+}
+
+.map-modal__btn-close path {
+    stroke: var(--map-modal-close-btn-color);
 }
