--- a/src/main/resources/static/css/vars/dark-theme.css
+++ b/src/main/resources/static/css/vars/dark-theme.css
@@ -1,6 +1,6 @@
 :root {
     /* common */
-    --page-bg-color: #121212;
+    --main-bg-color: #121212;
     --page-header-bg-color: #1c1c1e;
     --header-title-color: #f8f8f8;
     --header-bg-color: #1c1c1e;
@@ -31,6 +31,16 @@
     --input-submit-btn-color: #ffffff;
     --link-to-sign-up-color: #888487;
     --input-msg-error-color: #ff0000;
+    --file-input-color: #e3e3e3;
+    --file-input-color-active: #e5e5e5;
+    --file-input-bg-color: #676767;
+    --file-input-bg-color-active: #464646;
+
+    /* modals */
+    --map-modal-bg-color: #3a3a3a;
+    --map-modal-text-color: #f8f8f8;
+    --map-modal-close-btn-color: #f5f5f5;
+    --map-modal-border-color: #757575;
 
     /* btn */
     --orange-btn-color: #fff;
@@ -71,5 +81,5 @@
     --spot-inserted-date-add: #b3b3b5;
     --spot-card-bg-color: #3a3a3a;
     --spot-card-color: #f8f8f8;
-    --choice-map-point-color: #fff;
+    --choice-map-point-btn-color: #fff;
 }
