--- a/src/main/resources/templates/spot-adding-request.html
+++ b/src/main/resources/templates/spot-adding-request.html
@@ -9,9 +9,7 @@
     <link href="/css/map_for_instance.css" type="text/css" rel="stylesheet">
 
     <script src="https://api-maps.yandex.ru/v3/?apikey=b9ae7ce3-4f8e-4018-ae49-7751e42c5c25&lang=ru_RU"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@yandex/ymaps3-default-ui-theme@0.0.19/dist/index.min.js"></script>
-    <script src="/js/location-util.js"></script>
-    <script src="/js/ymap-point.js" defer></script>
+    <script src="/js/lib/ymaps3_default_ui_theme_0_0_19.min.js"></script>
 </head>
 <body>
 <div layout:fragment="content" class="content">
