Xmap 36 - заметки по геокодеру

--- a/src/main/resources/templates/spot-adding-request-instance.html
+++ b/src/main/resources/templates/spot-adding-request-instance.html
@@ -81,8 +81,8 @@
         <div class="spot-adding-request__info-content spot-adding-request__info-desc"
              th:text="${spotAddingRequest.spotDescription()}"></div>
 
-        <h3 class="spot-adding-request__info-header">🗺 Населенный пункт</h3>
-        <div class="spot-adding-request__info-content"><th:block th:text="${spotAddingRequest.city()}"></th:block></div>
+<!--        <h3 class="spot-adding-request__info-header">🗺 Населенный пункт</h3>-->
+<!--        <div class="spot-adding-request__info-content"><th:block th:text="${spotAddingRequest.city()}"></th:block></div>-->
 
         <div class="spot-adding-request__inserted-date" th:text="${spotAddingRequest.insertedAt()}"></div>
     </div>
