--- a/src/main/resources/templates/fragments/forms/spot-adding-request.html
+++ b/src/main/resources/templates/fragments/forms/spot-adding-request.html
@@ -50,7 +50,7 @@
 
       <div class="custom-file-input">
         <input type="file" multiple id="photos" name="photos" accept="image/*" th:field="*{files}" class="custom-file-input__input" />
-        <label for="photos" class="custom-file-input__label">Выбрать фото</label>
+        <label for="photos" class="btn btn-gray">Выбрать фото</label>
         <span class="custom-file-input__selected-count">Файлы не выбраны</span>
       </div>
     </div>
