--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -123,6 +123,10 @@ body {
     margin-top: 20px;
 }
 
+.ml-20px {
+    margin-left: 20px;
+}
+
 .sign-in-form .link-to-sign-up,
 .sign-up-form .link-to-sign-in {
     color: var(--link-to-sign-up-color);
@@ -162,6 +166,10 @@ a {
 
 .pin {
     height: 30px;
+}
+
+.pin:hover {
+    cursor: pointer;
 }
 
 .cluster {
@@ -216,12 +224,19 @@ a {
     box-shadow: 0 2px 10px var(--map-dialog-shadow-color);
     padding: 12px 16px;
     z-index: 3000; /* выше карты */
-    height: 35%;
 }
 
 .map-dialog__btns {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: right;
     align-items: center;
+    margin-top: 10px;
+}
+
+.map-dialog__image {
+    height: 30dvh;
+    width: 100%;
+    object-fit: cover;
+    display: block;
 }
